--- a/app/src/main/res/layout/activity_detail.xml
+++ b/app/src/main/res/layout/activity_detail.xml
@@ -46,10 +46,7 @@
                 android:id="@+id/recyclerGaleria"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                tools:listitem="@layout/view_galeria_imagenes"
-                tools:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
-                app:spanCount="3"
-                tools:itemCount="6"/>
+                tools:listitem="@layout/view_galeria_imagenes" />
         </LinearLayout>
     </ScrollView>
 
