--- a/app/src/main/res/layout/view_galeria_imagenes.xml
+++ b/app/src/main/res/layout/view_galeria_imagenes.xml
@@ -1,18 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<ImageView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:orientation="vertical">
-
-     <ImageView
-        android:id="@+id/imagen"
-        android:layout_width="200dp"
-        android:layout_height="200dp"
-        app:srcCompat="@mipmap/ic_launcher"
-         android:padding="10dp"
-         android:background="@color/black"
-        android:scaleType="centerCrop"
-        />
-
-</LinearLayout>
+    android:id="@+id/imagen"
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
+    android:scaleType="centerCrop"
+    android:padding="10dp"
+    app:srcCompat="@mipmap/ic_launcher" />
