--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -12,7 +12,6 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
-        app:spanCount="1"
-        tools:listitem="@layout/view_ficha_item"
-        android:padding="10dp"/>
+        app:spanCount="2"
+        tools:listitem="@layout/view_ficha_item" />
 </LinearLayout>
