--- a/app/src/main/res/layout/view_ficha_item.xml
+++ b/app/src/main/res/layout/view_ficha_item.xml
@@ -21,5 +21,5 @@
         android:padding="16dp"
         android:text="TextView"
         android:textAppearance="@style/TextAppearance.AppCompat.Large"
-        tools:text="Nombre" />
+        tools:text="movieTitle" />
 </LinearLayout>
