--- a/app/src/main/res/layout/view_ficha_item.xml
+++ b/app/src/main/res/layout/view_ficha_item.xml
@@ -4,7 +4,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:orientation="vertical">
+    android:orientation="vertical"
+    android:padding="2dp">
 
     <ImageView
         android:id="@+id/caratula"
@@ -17,9 +18,12 @@
         android:id="@+id/titulo"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:background="@color/design_default_color_primary"
         android:gravity="center"
-        android:padding="16dp"
         android:text="TextView"
         android:textAppearance="@style/TextAppearance.AppCompat.Large"
-        tools:text="movieTitle" />
+        android:textColor="@color/white"
+        tools:text="Nombre"
+        android:lines= "1"
+        android:ellipsize="end"/>
 </LinearLayout>
