--- a/app/src/main/res/menu/menu.xml
+++ b/app/src/main/res/menu/menu.xml
@@ -3,5 +3,5 @@
     <item
         android:id="@+id/fav"
         android:title="Sitios favoritos"
-        android:icon="@drawable/ic_fav"></item>
+        android:icon="@drawable/ic_fav_lleno"></item>
 </menu>
