--- a/app/src/main/res/layout/favoritos.xml
+++ b/app/src/main/res/layout/favoritos.xml
@@ -8,9 +8,10 @@
 
     <androidx.recyclerview.widget.RecyclerView
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="wrap_content"
         tools:listitem="@layout/view_favoritos_item"
         app:spanCount="1"
+        android:padding="10dp"
         android:id="@+id/recycler">
     </androidx.recyclerview.widget.RecyclerView>
 
