--- a/app/src/main/res/layout/activity_detail.xml
+++ b/app/src/main/res/layout/activity_detail.xml
@@ -6,9 +6,17 @@
     android:orientation="vertical"
     tools:context=".DetailActivity">
 
+    <ProgressBar
+        android:id="@+id/progressBar"
+        style="?android:attr/progressBarStyle"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content" />
+
     <ScrollView
+        android:id="@+id/ScrollView"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:layout_gravity="center"
         android:clipToPadding="true"
         android:padding="8dp">
 
@@ -29,9 +37,9 @@
                     tools:srcCompat="@tools:sample/avatars" />
 
                 <com.google.android.material.floatingactionbutton.FloatingActionButton
+                    android:id="@+id/fab"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:id="@+id/fab"
                     android:layout_alignParentEnd="true"
                     android:layout_alignParentBottom="true"
                     android:layout_marginRight="10dp"
@@ -68,6 +76,14 @@
                 android:layout_height="1dp"
                 android:background="?android:attr/listDivider" />
 
+            <TextView
+                android:id="@+id/textoGaleria"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="Galeria"
+                android:textColor="@color/black"
+                android:textSize="22sp" />
+
             <HorizontalScrollView
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
@@ -77,14 +93,6 @@
                     android:layout_width="wrap_content"
                     android:layout_height="match_parent"
                     android:orientation="vertical">
-
-                    <TextView
-                        android:id="@+id/textoGaleria"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:text="Galeria"
-                        android:textColor="@color/black"
-                        android:textSize="22sp" />
 
                     <androidx.recyclerview.widget.RecyclerView
                         android:id="@+id/recyclerGaleria"
